# receive-post-then-show

./: README.md  app.py  pyproject.toml  requirements.txt
src/receive_post/: __init__.py
templates/: index.html
