[project]
name = "receive-post"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Yuki Takahashi", email = "yuki0627@gmail.com" }
]
dependencies = [
    "Flask>=3.0.2",
    "gunicorn>=21.2.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
hello = "receive_post:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/receive_post"]
